--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,16 @@
   "description": "Backend for Home Automation Control Panel",
   "main": "server.js",
   "scripts": {
+    "prestart": "node scripts/https-setup.js",
     "start": "node server.js",
+    "predev": "node scripts/https-setup.js",
     "dev": "node --watch server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "selfsigned": "^2.4.1",
     "socket.io": "^4.7.2"
   }
 }
