--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "selfsigned": "^2.4.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "undici": "^6.22.0"
   }
 }
