Add persisted card size scale setting

--- a/server/data/config.example.json
+++ b/server/data/config.example.json
@@ -12,6 +12,7 @@
   "ui": {
     "colorScheme": "electric-blue",
     "cardOpacityScalePct": 100,
+    "cardScalePct": 100,
     "homeBackground": {
       "enabled": false,
       "url": null,
