Add panel profiles and reorganize Settings tabs

--- a/server/data/config.example.json
+++ b/server/data/config.example.json
@@ -19,6 +19,7 @@
       "url": null,
       "opacityPct": 35
     },
+    "panelProfiles": {},
     "mainAllowedDeviceIds": [],
     "ctrlAllowedDeviceIds": []
   },
