Add blur control, glow containment, and preset panel profiles

--- a/server/data/config.example.json
+++ b/server/data/config.example.json
@@ -12,9 +12,13 @@
   "ui": {
     "colorScheme": "electric-blue",
     "cardOpacityScalePct": 100,
+    "blurScalePct": 100,
     "secondaryTextOpacityPct": 45,
     "secondaryTextSizePct": 100,
     "secondaryTextColorId": null,
+    "primaryTextOpacityPct": 100,
+    "primaryTextSizePct": 100,
+    "primaryTextColorId": null,
     "cardScalePct": 100,
     "homeRoomColumnsXl": 3,
     "homeBackground": {
@@ -22,7 +26,112 @@
       "url": null,
       "opacityPct": 35
     },
-    "panelProfiles": {},
+    "panelProfiles": {
+      "Neon Glass": {
+        "colorScheme": "electric-blue",
+        "cardOpacityScalePct": 75,
+        "blurScalePct": 170,
+        "primaryTextOpacityPct": 100,
+        "primaryTextSizePct": 110,
+        "primaryTextColorId": "white",
+        "secondaryTextOpacityPct": 55,
+        "secondaryTextSizePct": 105,
+        "secondaryTextColorId": "slate",
+        "cardScalePct": 105,
+        "homeRoomColumnsXl": 3
+      },
+      "Stealth Slate": {
+        "colorScheme": "slate",
+        "cardOpacityScalePct": 60,
+        "blurScalePct": 0,
+        "primaryTextOpacityPct": 95,
+        "primaryTextSizePct": 105,
+        "primaryTextColorId": "white",
+        "secondaryTextOpacityPct": 35,
+        "secondaryTextSizePct": 95,
+        "secondaryTextColorId": "slate",
+        "cardScalePct": 110,
+        "homeRoomColumnsXl": 3
+      },
+      "Arcade Mint": {
+        "colorScheme": "neon-green",
+        "cardOpacityScalePct": 90,
+        "blurScalePct": 140,
+        "primaryTextOpacityPct": 100,
+        "primaryTextSizePct": 115,
+        "primaryTextColorId": "neon-green",
+        "secondaryTextOpacityPct": 50,
+        "secondaryTextSizePct": 100,
+        "secondaryTextColorId": "emerald",
+        "cardScalePct": 100,
+        "homeRoomColumnsXl": 3
+      },
+      "Copper Warmth": {
+        "colorScheme": "copper",
+        "cardOpacityScalePct": 115,
+        "blurScalePct": 110,
+        "primaryTextOpacityPct": 100,
+        "primaryTextSizePct": 110,
+        "primaryTextColorId": "tan",
+        "secondaryTextOpacityPct": 45,
+        "secondaryTextSizePct": 100,
+        "secondaryTextColorId": "brown",
+        "cardScalePct": 100,
+        "homeRoomColumnsXl": 3
+      },
+      "Ice Cave": {
+        "colorScheme": "classic-blue",
+        "cardOpacityScalePct": 80,
+        "blurScalePct": 200,
+        "primaryTextOpacityPct": 100,
+        "primaryTextSizePct": 110,
+        "primaryTextColorId": "cyan",
+        "secondaryTextOpacityPct": 50,
+        "secondaryTextSizePct": 100,
+        "secondaryTextColorId": "sky",
+        "cardScalePct": 100,
+        "homeRoomColumnsXl": 3
+      },
+      "Amber Signal": {
+        "colorScheme": "amber",
+        "cardOpacityScalePct": 100,
+        "blurScalePct": 120,
+        "primaryTextOpacityPct": 100,
+        "primaryTextSizePct": 110,
+        "primaryTextColorId": "amber",
+        "secondaryTextOpacityPct": 45,
+        "secondaryTextSizePct": 100,
+        "secondaryTextColorId": "stone",
+        "cardScalePct": 100,
+        "homeRoomColumnsXl": 3
+      },
+      "Zinc Minimal": {
+        "colorScheme": "zinc",
+        "cardOpacityScalePct": 130,
+        "blurScalePct": 35,
+        "primaryTextOpacityPct": 100,
+        "primaryTextSizePct": 105,
+        "primaryTextColorId": "white",
+        "secondaryTextOpacityPct": 30,
+        "secondaryTextSizePct": 95,
+        "secondaryTextColorId": "zinc",
+        "cardScalePct": 95,
+        "homeRoomColumnsXl": 3
+      },
+      "Red Alert": {
+        "colorScheme": "neon-red",
+        "cardOpacityScalePct": 95,
+        "blurScalePct": 90,
+        "primaryTextOpacityPct": 100,
+        "primaryTextSizePct": 115,
+        "primaryTextColorId": "neon-red",
+        "secondaryTextOpacityPct": 50,
+        "secondaryTextSizePct": 100,
+        "secondaryTextColorId": "rose",
+        "cardScalePct": 105,
+        "homeRoomColumnsXl": 3
+      }
+    },
     "mainAllowedDeviceIds": [],
     "ctrlAllowedDeviceIds": []
   },
